Bug 1664372 - Fix font loading invalidation to account for metrics coming from the parent style. r=jfkthame

We were only looking at the given frame's style, which is not
sufficient for this case.

Differential Revision: https://phabricator.services.mozilla.com/D96237